# packaging

./: README.md  bv-packaging-views.org  dbm_Packaging_notes.md  dbm_Relocatable_notes.md  ktf_Packaging_ideas.md
RelocatableSoftware/: README.md
RelocatableSoftware/DevTools/: README.md
RelocatableSoftware/HSFReloc/: README.md
RelocatableSoftware/HSFReloc/programs/: CMakeLists.txt
RelocatableSoftware/HSFReloc/programs/binreloc/: _binreloc.c.in  _binreloc.h.in  hsf_binreloc.h.in
RelocatableSoftware/HSFReloc/programs/binreloc/original/: binreloc.h.in
RelocatableSoftware/Relocatable/: CMakeLists.txt  README.md
RelocatableSoftware/Relocatable/binreloc/: CMakeLists.txt  HSFReloc.h  README.md
RelocatableSoftware/Relocatable/poco/: CMakeLists.txt  README.md
RelocatableSoftware/Relocatable/programs/: CMakeLists.txt  README.md  hsfreloc-poco.cpp  hsfreloc.cpp
RelocatableSoftware/Relocatable/programs/binreloc/: HSFApplicationPaths.cpp.in  HSFApplicationPaths.h  HSFReloc.cpp  hsf_binreloc.c
RelocatableSoftware/Relocatable/qt/: CMakeLists.txt  README.md  hsf-reloc-qt.cpp
RelocatableSoftware/Relocatable/resources/: resource.txt
RelocatableSoftware/SLPackage/: CMakeLists.txt  README.md
RelocatableSoftware/SLPackage/programs/: CMakeLists.txt  README.md  SLPApplicationPaths.cpp.in  SLPApplicationPaths.h  slp-binreloc.cpp
RelocatableSoftware/SLPackage/programs/binreloc/original/: binreloc.c
RelocatableSoftware/SLPackage/programs/python/: slp-python
RelocatableSoftware/SLPackage/programs/ruby/: slp-ruby
RelocatableSoftware/SLPackage/resources/: resource.txt
documents/: HSFpackagingMeetingNotes13-Mar.md  README.md
documents/papers/chep2019/: .gitignore  README.md  modern-stack.bib  modern-stack.tex
istools/: CMakeLists.txt  README.md  ist-detect.cpp  ist-detect.sh  ist-simd-macros.cpp
istools/vcl/: instrset.h
testdrive/: README.md  TestDriveREADMETemplate.md
testdrive/alibuild/: Dockerfile  README
testdrive/lcgcmake/: README.md
testdrive/lcgcmake/c7-lcgcmake/: Dockerfile  heptools-hsf.cmake  lcgcmake-wrapper
testdrive/nix/: README.md
testdrive/nix/c7-nix/: Dockerfile  clhep.nix  testdrive_environment.nix
testdrive/portage/: README.md
testdrive/portage/docker/: Dockerfile  world
testdrive/portage/docker/portage/: make.conf  package.accept_keywords
testdrive/portage/docker/portage/package.use/: llvm  qt5  root
testdrive/spack/: README.md
testdrive/spack/c7-spack/: Dockerfile
white_papers/: fnal_requirements_cover.md
